# onigpp

./: .gitignore  API.md  API_ja.txt  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  RE.md  README.md  README_ja.md  RE_ja.md  RE_ja.txt  encodings.h  onigpp.h  onigpp_test.cpp  onigpp_testw.cpp
.github/: copilot-instructions.md
.github/workflows/: ci.yml
dialog/: CMakeLists.txt  dialog.cpp  dialog_res.rc
src/: onigpp.cpp  onigpp_compat.h
tests/: CMakeLists.txt  backref_test.cpp  benchmark_optimization.cpp  compat_regression_partial_match.cpp  cyclic_replace.cpp  ecmascript_compat_test.cpp  ecmascript_multiline_test.cpp  empty_pattern_test.cpp  error_type_constants_test.cpp  format_literal_test.cpp  initializer_list_test.cpp  iterator_range_ctor_test.cpp  match_flag_constants_test.cpp  match_results_aliases_test.cpp  match_results_compat_test.cpp  match_results_format_test.cpp  match_results_position_length_test.cpp  match_results_ready_test.cpp  nosubs_collate_test.cpp  onigpp_bidir_iterator_test.cpp  onigpp_test.cpp  onigpp_testw.cpp  oniguruma_flag_test.cpp  regex_escape_test.cpp  regex_exception_test.cpp  regex_iterator_zero_width_test.cpp  regex_traits_test.cpp  sub_match_compat_test.cpp  swap_test.cpp  tests.h
tests/compat/: CMakeLists.txt  README.md  compat_test.cpp  coverage_candidates.md  patterns.json
tools/: re_replace.cpp
u8dialog/: CMakeLists.txt  dialog.cpp
wdialog/: CMakeLists.txt
